# CrazyFly_ws

devel/: .catkin  setup.sh  (+1 more)
src/NASLab_Crazyflies-master/crazyflie_scripts/: CMakeLists.txt  package.xml
src/NASLab_Crazyflies-master/crazyflie_scripts/launch/: .mission_plan.sh.swp  check_all_battery.launch  check_battery.launch  launch_crazyflies.launch  launch_mission.launch  mission_plan.sh  single_cf_qualisys.launch
src/NASLab_Crazyflies-master/crazyflie_scripts/mission_sequences/: seq_Mobile_2.8_3.5_0.2_disjoint_map_3_3.csv  seq_Mobile_2.8_3.5_0.2_disjoint_map_3_3.eps  seq_Mobile_3.5_4.5_0.2_map_mh370_3_3.csv  seq_Mobile_3.5_4.5_0.2_map_mh370_3_3.eps  seq_Mobile_3.5_4_0.2_map_mh370_2_2.csv  seq_Mobile_3.5_4_0.2_map_mh370_2_2.eps  seq_Mobile_3_3.5_0.15_disjoint_map_3_3.csv  seq_Mobile_3_3.5_0.15_disjoint_map_3_3.eps  seq_Mobile_3_3.5_0.2_disjoint_map_3_3.csv  seq_Mobile_Replan0_3.5_4.5_0.2_map_mh370_5_5.csv  seq_Mobile_Replan0_3.5_4.5_0.2_map_mh370_5_5.eps  seq_Mobile_Replan0_3.5_4_0.175_map_mh370_8_8.csv  seq_Mobile_Replan0_3.5_4_0.175_map_mh370_8_8.eps  seq_Mobile_Replan0_3.5_4_0.19_map_mh370_8_8.csv  seq_Mobile_Replan0_3.5_4_0.19_map_mh370_8_8.eps  seq_Mobile_Replan0_3.5_4_0.2_map_mh370_3_3.eps  seq_Mobile_Replan0_3.5_4_0.2_map_mh370_5_5.csv  seq_Mobile_Replan0_3.5_4_0.2_map_mh370_5_5.eps  seq_Mobile_Replan0_3.5_4_0.2_map_mh370_8_6.csv  seq_Mobile_Replan0_3.5_4_0.2_map_mh370_8_6.eps  seq_Mobile_Replan0_4_5_0.3_map_mh370_3_3.csv  seq_Mobile_Replan0_4_5_0.3_map_mh370_3_3.eps  seq_Static_3.5_4.5_0.2_disjoint_map_3_6.csv  seq_Static_3.5_4.5_0.2_disjoint_map_3_6.eps  (+21 more)
(+455 files in other folders)
